refactor msg persistant state